Controller devided
